notebook version example added

--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -56,7 +56,7 @@
       "source": [
         "config = {\n",
         "    'torch': {\n",
-        "        'device': \"cpu\"\n",
+        "        'device': \"cuda\"\n",
         "    },\n",
         "\n",
         "    'data': {\n",
