prediction and kfold bug fix

--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -93,7 +93,8 @@
         "\n",
         "    'kfold': {\n",
         "        'splits': 0,\n",
-        "        'seed': 42\n",
+        "        'seed': 42,\n",
+        "        \"test_on_original\": False\n",
         "    },\n",
         "\n",
         "    'inference': {\n",
