prediction and kfold bug fix

--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install NERP==1.0.2"
+        "!pip install NERP==1.0.2.1"
       ]
     },
     {
@@ -69,7 +69,7 @@
         "    },  \n",
         "\n",
         "    'model': { \n",
-        "        'archi': 'bilstm',\n",
+        "        'archi': 'bilstm-crf',\n",
         "        'o_tag_cr': True,\n",
         "        'max_len': 128,\n",
         "        'dropout': 0.1,\n",
