--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install NERP==1.0.2.2"
+        "!pip install NERP==1.1"
       ]
     },
     {
@@ -56,7 +56,8 @@
       "source": [
         "config = {\n",
         "    'torch': {\n",
-        "        'device': \"cuda\"\n",
+        "        'device': \"cuda\",\n",
+        "        \"seed\": 42\n",
         "    },\n",
         "\n",
         "    'data': {\n",
@@ -64,52 +65,53 @@
         "        'valid_data': '',\n",
         "        'train_valid_split': 0.2,                                       \n",
         "        'test_data': 'data/test.csv',\n",
+        "        'parameters': {\n",
+        "            \"sep\": ',',\n",
+        "            'quoting': 3,\n",
+        "            'shuffle': False\n",
+        "        }\n",
         "        'limit': 0,\n",
-        "        'tag_scheme': ['B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-LOC', 'I-LOC', 'B-MISC', 'I-MISC']\n",
+        "        'tags': ['B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-LOC', 'I-LOC', 'B-MISC', 'I-MISC']\n",
         "    },  \n",
         "\n",
         "    'model': { \n",
         "        'archi': 'bilstm-crf',\n",
-        "        'o_tag_cr': True,\n",
         "        'max_len': 128,\n",
         "        'dropout': 0.1,\n",
         "        'hyperparameters': {\n",
         "            'epochs': 10,\n",
         "            'warmup_steps': 500,\n",
         "            'train_batch_size': 64,\n",
-        "            'learning_rate': 0.0001,\n",
+        "            'valid_batch_size': 8,\n",
+        "            'lr': 0.0001,\n",
         "        },\n",
         "        'tokenizer_parameters': {\n",
         "            'do_lower_case': True\n",
         "        },\n",
-        "        'pretrained_models': [\"bert-base-uncased\"]\n",
+        "        'pretrained_models': [\"roberta-base\"]\n",
         "    },\n",
         "\n",
-        "    'train':{\n",
-        "        'existing_model_path':  '',\n",
-        "        'existing_tokenizer_path': '',\n",
-        "        'output_dir': \"output/\"\n",
+        "    'training':{\n",
+        "        'continue_from_checkpoint':  False,\n",
+        "        'checkpoint_path': '',\n",
+        "        'checkpoint_tokenizer_path': ''\n",
+        "        'output_dir': \"output/\",\n",
+        "        'o_tag_cr': True,\n",
+        "        'return_accuracy': False\n",
         "    },\n",
         "\n",
         "    'kfold': {\n",
+        "        'is_kfold': False\n",
         "        'splits': 0,\n",
-        "        'seed': 42,\n",
         "        \"test_on_original\": False\n",
         "    },\n",
         "\n",
         "    'inference': {\n",
-        "        'archi': \"bilstm\",\n",
-        "        'max_len': 128, \n",
         "        'pretrained': \"roberta-base\",\n",
         "        'model_path': \"roberta-base/model.bin\",\n",
         "        'tokenizer_path': \"roberta-base/tokenizer\",\n",
-        "        'bulk': {\n",
-        "          'in_file_path': \"data/test.csv\",\n",
-        "          'out_file_path': \"data/output.csv\"\n",
-        "        },\n",
-        "        'individual': {\n",
-        "          'text': \"Hello from NERP\"\n",
-        "        }\n",
+        "        'in_file_path': \"data/test.csv\",\n",
+        "        'out_file_path': \"data/output.csv\"\n",
         "    }\n",
         "}\n",
         "\n",
