--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -62,9 +62,9 @@
         "\n",
         "    'data': {\n",
         "        'train_data': 'data/train.csv',\n",
-        "        'valid_data': '',\n",
+        "        'valid_data': 'data/valid.csv',\n",
         "        'train_valid_split': 0.2,                                       \n",
-        "        'test_data': 'data/test.csv',\n",
+        "        'test_data': ['data/test.csv'],\n",
         "        'parameters': {\n",
         "            \"sep\": ',',\n",
         "            'quoting': 3,\n",
@@ -79,22 +79,22 @@
         "        'max_len': 128,\n",
         "        'dropout': 0.1,\n",
         "        'hyperparameters': {\n",
-        "            'epochs': 10,\n",
+        "            'epochs': 1,\n",
         "            'warmup_steps': 500,\n",
         "            'train_batch_size': 64,\n",
         "            'valid_batch_size': 8,\n",
         "            'lr': 0.0001,\n",
         "        },\n",
         "        'tokenizer_parameters': {\n",
-        "            'do_lower_case': True\n",
+        "            'do_lower_case': False\n",
         "        },\n",
         "        'pretrained_models': [\"roberta-base\"]\n",
         "    },\n",
         "\n",
         "    'training':{\n",
         "        'continue_from_checkpoint':  False,\n",
-        "        'checkpoint_path': '',\n",
-        "        'checkpoint_tokenizer_path': ''\n",
+        "        'checkpoint_path': 'models/model.bin',\n",
+        "        'checkpoint_tokenizer_path': 'models/tokenizer'\n",
         "        'output_dir': \"output/\",\n",
         "        'o_tag_cr': True,\n",
         "        'return_accuracy': False\n",
@@ -102,14 +102,14 @@
         "\n",
         "    'kfold': {\n",
         "        'is_kfold': False\n",
-        "        'splits': 0,\n",
+        "        'splits': 2,\n",
         "        \"test_on_original\": False\n",
         "    },\n",
         "\n",
         "    'inference': {\n",
         "        'pretrained': \"roberta-base\",\n",
-        "        'model_path': \"roberta-base/model.bin\",\n",
-        "        'tokenizer_path': \"roberta-base/tokenizer\",\n",
+        "        'model_path': \"output/model.bin\",\n",
+        "        'tokenizer_path': \"output/tokenizer\",\n",
         "        'in_file_path': \"data/test.csv\",\n",
         "        'out_file_path': \"data/output.csv\"\n",
         "    }\n",
