--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -78,6 +78,7 @@
         "        'archi': 'bilstm-crf',\n",
         "        'max_len': 128,\n",
         "        'dropout': 0.1,\n",
+        "        'num_workers': 1\n",
         "        'hyperparameters': {\n",
         "            'epochs': 1,\n",
         "            'warmup_steps': 500,\n",
