bug fix in networks

--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -69,7 +69,7 @@
         "            \"sep\": ',',\n",
         "            'quoting': 3,\n",
         "            'shuffle': False\n",
-        "        }\n",
+        "        },\n",
         "        'limit': 0,\n",
         "        'tags': ['B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-LOC', 'I-LOC', 'B-MISC', 'I-MISC']\n",
         "    },  \n",
@@ -78,7 +78,7 @@
         "        'archi': 'bilstm-crf',\n",
         "        'max_len': 128,\n",
         "        'dropout': 0.1,\n",
-        "        'num_workers': 1\n",
+        "        'num_workers': 1,\n",
         "        'hyperparameters': {\n",
         "            'epochs': 1,\n",
         "            'warmup_steps': 500,\n",
@@ -95,14 +95,14 @@
         "    'training':{\n",
         "        'continue_from_checkpoint':  False,\n",
         "        'checkpoint_path': 'models/model.bin',\n",
-        "        'checkpoint_tokenizer_path': 'models/tokenizer'\n",
+        "        'checkpoint_tokenizer_path': 'models/tokenizer',\n",
         "        'output_dir': \"output/\",\n",
         "        'o_tag_cr': True,\n",
         "        'return_accuracy': False\n",
         "    },\n",
         "\n",
         "    'kfold': {\n",
-        "        'is_kfold': False\n",
+        "        'is_kfold': False,\n",
         "        'splits': 2,\n",
         "        \"test_on_original\": False\n",
         "    },\n",
