--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -22,7 +22,10 @@
       },
       "outputs": [],
       "source": [
-        "!pip install NERP==1.1"
+        "!pip install NERP==1.1\n",
+        "\n",
+        "#git clone --branch v1.1 https://github.com/Chaarangan/NERP.git\n",
+        "#cd NERP && pip install -e ."
       ]
     },
     {
