--- a/examples/notebook-version/NERP.ipynb
+++ b/examples/notebook-version/NERP.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "!pip install NERP==1.1-rc1\n",
         "\n",
-        "#git clone --branch v1.1 https://github.com/Chaarangan/NERP.git\n",
+        "#git clone --branch v1.1-rc1 https://github.com/Chaarangan/NERP.git\n",
         "#cd NERP && pip install -e ."
       ]
     },
@@ -210,7 +210,14 @@
         "model = NERP(env_path)\n",
         "\n",
         "# Start trainnig\n",
-        "model.train()"
+        "model.train()\n",
+        "\n",
+        "# make predictions on a single sentence\n",
+        "#output = model.predict_text(\"Hello from NERP\")\n",
+        "#print(output)\n",
+        "\n",
+        "# make predictions on a input file\n",
+        "#model.predict()\n"
       ]
     }
   ],
